deploy/kubernetes/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nakama-backend
  name: nakama-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nakama-backend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nakama-backend
    spec:
      containers:
      - image: jasoncky96/nakama-backend:latest
        imagePullPolicy: Always
        name: nakama-backend
        resources: {}
        ports:
          - containerPort: 80
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nakama-backend
  name: nakama-backend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nakama-backend
