deploy/kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nakama-frontend
  name: nakama-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nakama-frontend
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nakama-frontend
    spec:
      containers:
      - image: jasoncky96/nakama-frontend:dev
        imagePullPolicy: Always
        name: nakama-frontend
        resources: {}
        ports:
          - containerPort: 3000
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: nakama-frontend
  name: nakama-frontend
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  selector:
    app: nakama-frontend
