deploy/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nakama-ingress
spec:
  rules:
  - host: "nakama.cluster.local"
    http:
      paths:
      - backend:
          service:
            name: nakama-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
      - backend:
          service:
            name: nakama-backend
            port:
              number: 80
        path: /api
        pathType: Prefix
